--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <article class="feature-card" tabindex="0" role="article" aria-label="Collaborative Robot Solutions">
         <span class="material-icons feature-icon" aria-hidden="true">group_work</span>
         <h3 class="feature-title">Collaborative Robots</h3>
-        <p class="feature-desc">Innovative cobots designed to work safely alongside humans in factories and labs.</p>
+        <p class="feature-desc">Innovative robots designed to work safely alongside humans in factories and labs.</p>
       </article>
       <article class="feature-card" tabindex="0" role="article" aria-label="Sustainable Robotics Technology">
         <span class="material-icons feature-icon" aria-hidden="true">eco</span>
@@ -311,7 +311,7 @@
   </section>
   <section id="contact" class="contact" role="region" aria-labelledby="contact-title">
     <h2 id="contact-title">Get in Touch</h2>
-    <p>Have questions? Want to collaborate? Reach out to us at <a href="mailto:info@robotech.com">info@robotech.com</a></p>
+    <p>Have questions? Want to collaborate? Reach out to us at "jaswarrishu642@gmail.com" <a href="mailto:info@robotech.com">info@robotech.com</a></p>
     <div class="social-links" aria-label="Social media links">
       <a href="#" aria-label="Facebook" tabindex="0"><span class="material-icons" aria-hidden="true">facebook</span></a>
       <a href="#" aria-label="Twitter" tabindex="0"><span class="material-icons" aria-hidden="true">twitter</span></a>
@@ -322,7 +322,7 @@
 </main>
 
 <footer>
-  <p>© 2024 RoboTech Robotics Company. All rights reserved.</p>
+  <p>© 2025 RoboTech Robotics Company. All rights reserved.</p>
 </footer>
 </body>
 </html>
