Add script tag for student.js in index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <footer>
     <p>Created by Rishu Jaswar © 2025</p>
   </footer>
+  <script src="student.js"></script>
 
   <script src="script.js"></script>
 </body>
